--- a/projects/Project_2/css/style.css
+++ b/projects/Project_2/css/style.css
@@ -1,12 +1,8 @@
 body {
-  background: rgb(255, 118, 64);
+  background: rgb(30,30,30);
   color: rgb(35,35,35);
   text-align: center;
   font-family: Avenir;
-}
-h1 {
-  margin-top: 35px;
-  margin-bottom: -20px;
 }
 .container {
   display: flex;
@@ -15,32 +11,14 @@ h1 {
   justify-content: center;
   margin-top: 30px;
 }
-input {
-  font-size: 20px;
-  width: 100px;
-  border-radius: 5px;
-  border: none;
-  padding: 10px;
-  background: rgb(15, 162, 241);
-  text-align: center;
-  border: 1px solid rgb(30,30,30);
-}
 .box {
   margin: 3px;
-  width: 250px;
-  height: 250px;
+  width: 100px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
   border: 1px solid #000;
   border-radius: 5px;
-}
-.box:hover {
-  cursor: pointer;
-  color: rgb(206, 32, 141);
-  border: 1px solid white;
-  opacity: 0.7;
-}
-.number {
-  font-size: 150px;
+  font-size: 50px;
 }
