--- a/assets/main.css
+++ b/assets/main.css
@@ -53,21 +53,22 @@ img {
 h1 {
 	font-size: 50px;
 	margin-top: 20px;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
+}
+.mainTitle {
+	margin-bottom: 10px;
 }
 .projectList {
 	position: absolute;
-	left: 435px;
+	left: 430px;
 	min-width: 700px;
 	padding-top: 15px;
 	background: rgb(30,30,30);
 	z-index: 1;
 }
-
 td {
 	font-family: 'Quicksand', sans-serif;
 	font-size: 27px;
-
 }
 .leftCol {
 	text-align: left;
@@ -95,8 +96,14 @@ td {
 	padding-top: 5px;
 	padding-left: 5px;
 	padding-bottom: 25px;
-	width: 750px;
+	width: 740px;
 	text-align: left;
+}
+.contentTitle {
+	text-align: left;
+}
+.lowerTitle {
+	margin-bottom: 25px;
 }
 .contentText {
 	font-family: 'Quicksand', sans-serif;
@@ -122,6 +129,7 @@ td {
 }
 .title h1 {
 	margin-bottom: 0px;
+	font-size: 40px;
 }
 .subText {
 	font-family: 'Quicksand', sans-serif;
