--- a/assets/main.css
+++ b/assets/main.css
@@ -125,26 +125,31 @@ td {
 	color: white;
 }
 .contentWrapper {
-	margin-bottom: 40px;
+	margin-bottom: 15px;
+	border-bottom: 1px solid #FFFFF2;
 }
 .resources {
-	border-top: 1px solid #FFFFF2;
-	padding-top: 10px;
+
 }
-.title h1 {
+.title {
 	margin-bottom: 0px;
-	font-size: 40px;
+/*	margin-right: 15px;*/
+	color: rgb(114, 223, 250);
+	font-size: 30px;
+	font-family: 'Quattrocento Sans', sans-serif;
 }
 .resources a, .resources a:visited {
 	color: rgb(215, 215, 215);
+	color: rgb(114, 223, 250);
 }
 .resources a:hover {
-	text-decoration: underline;
+	text-decoration: none;
 	color: rgb(114, 223, 250);
+	color: white;
 }
 .subText {
 	font-family: 'Quicksand', sans-serif;
-	font-size: 28px;
+	font-size: 24px;
 	line-height: 120%;
 	margin-top: 5px;
 	color: rgb(200,200,200);
@@ -196,7 +201,7 @@ td {
 		text-align: center;
 		font-size: 35px;
 	}
-	.title h1 {
+	.title {
 		font-size: 26px;
 		text-align: left;
 	}
