--- a/assets/main.css
+++ b/assets/main.css
@@ -106,6 +106,11 @@ td {
 .contentTitle {
 	text-align: left;
 }
+#trends {
+	width: 700px;
+	margin: auto;
+	margin-left: 5px;
+}
 .lowerTitle {
 	margin-bottom: 25px;
 }
@@ -186,10 +191,10 @@ td {
 		margin: 0 auto;
 	}
 	tr {
-		height: 28px;
+		height: 20px;
 	}
 	td {
-		font-size: 20px;
+		font-size: 18px;
 	}
 	.leftCol {
 		display: none;
@@ -204,6 +209,13 @@ td {
 	.title {
 		font-size: 26px;
 		text-align: left;
+	}
+	.highCharts {
+		padding:15px;
+	}
+	#trends {
+		width: 85vw;
+		margin-left: auto;
 	}
 	.content {
 		width: auto;
